Change log: - Styled the jifs page. - Added a container over the search button and bar for gifs so that it looks better and is centered in the middle of the screen. - Added margin bottom so its possible to see all the gifs that got covered by the fixed footer bar.

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,18 @@ body{
     margin-top: 60px;
     margin-bottom: 50px;
 }
+.jif-container{
+    background: rgb(17, 2, 27);
+    color:rgb(255, 255, 255);
+    height: 80px;
+    max-width: 900px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: white;
+    border-radius: 10px;
+    margin-top: 60px;
+    margin-bottom: 50px;
+}
 .intro-image-border{
     margin-top: 20px;
     border-width: 10px;
@@ -49,9 +61,11 @@ body{
 }
 .fixed-footer-bar{
     background: black;
-    height: 120px;
+    height: 90px;
 }
+.search-container{
 
+}
 .about-me-image-border{
     margin-top: 20px;
     border-width: 10px;
